--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,3 +9,6 @@ include_directories(
 add_executable(example1 example1.cpp)
 target_link_libraries(example1 fires)
 
+add_executable(example2 example2.cpp)
+target_link_libraries(example2 fires)
+
