Renamed classes and added vectors of pointers features.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,9 @@ set(CMAKE_CXX_FLAGS_DEBUG
 # Build library
 add_library (${PROJECT_NAME} SHARED
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/Comparer.cpp  
-${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeatureFloatPtrComparer.cpp  
+${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeaturePtrToFloatComparer.cpp  
 #${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeatureVectorPtrComparer.cpp  
-${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeatureFloatPtr.cpp  
+${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeaturePtrToFloat.cpp  
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeaturePtr.cpp  
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/Object.cpp  
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/System.cpp
