Refactored separate interface from implementation but in the same .h file in case of templates.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,9 @@ set(CMAKE_CXX_FLAGS_DEBUG
 add_library (${PROJECT_NAME} SHARED
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/Comparer.cpp  
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeaturePtrToFloatComparer.cpp  
-#${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeatureVectorPtrComparer.cpp  
+${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeaturePtrToVector.cpp 
+${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeaturePtrToVectorComparer.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeaturePtrToVectorOfPtrs.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeaturePtrToFloat.cpp  
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/FeaturePtr.cpp  
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/Object.cpp  
