--- a/fires/CMakeLists.txt
+++ b/fires/CMakeLists.txt
@@ -2,8 +2,9 @@ source_group(\\ FILES CMakeLists.txt)
 
 set(FIRES_PUBLIC_HEADERS ${COMMON_INCLUDES}
 Comparer.h
+Definitions.h
 FeaturePtr.h
-FeaturePtrToFloat.h
+FeaturePtrToScalar.h
 FeaturePtrToVector.h
 FeaturePtrToVectorOfPtrs.h
 FeatureScalar.h
@@ -11,12 +12,12 @@ Object.h
 Objects.h
 QueryFeatures.h
 Feature.h
-FeaturePtrToFloatComparer.h
+FeaturePtrToScalarComparer.h
 FeaturePtrToVectorComparer.h
 FeaturePtrToVectorOfPtrsComparer.h
 FeatureScalarComparer.h
 FeatureVectorComparer.h
-System.h
+Engine.h
 )
 
 set(FIRES_HEADERS )
@@ -24,11 +25,10 @@ set(FIRES_HEADERS )
 set(FIRES_SOURCES ${COMMON_SOURCES}
 Comparer.cpp
 Feature.cpp
-FeaturePtrToFloatComparer.cpp
 Object.cpp
 Objects.cpp
 QueryFeatures.cpp
-System.cpp
+Engine.cpp
 )
 
 common_library(fires)
