Attempt to use boost any.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,16 +4,19 @@ include_directories(
   ${CMAKE_BINARY_DIR}
 )
 
-add_executable( scalarFeatures scalarFeatures.cpp )
-target_link_libraries( scalarFeatures fires )
+add_executable( objectFeatures objectFeatures.cpp )
+target_link_libraries( objectFeatures fires )
 
-add_executable(vectorFeatures vectorFeatures.cpp)
-target_link_libraries(vectorFeatures fires)
+# add_executable( scalarFeatures scalarFeatures.cpp )
+# target_link_libraries( scalarFeatures fires )
 
-add_executable(floatFeaturesNormalization
-floatFeaturesNormalization.cpp)
-target_link_libraries(floatFeaturesNormalization fires)
+# add_executable(vectorFeatures vectorFeatures.cpp)
+# target_link_libraries(vectorFeatures fires)
 
-add_executable(largeNumberOfObjects
-largeNumberOfObjects.cpp)
-target_link_libraries(largeNumberOfObjects fires)
+# add_executable(floatFeaturesNormalization
+# floatFeaturesNormalization.cpp)
+# target_link_libraries(floatFeaturesNormalization fires)
+
+# add_executable(largeNumberOfObjects
+# largeNumberOfObjects.cpp)
+# target_link_libraries(largeNumberOfObjects fires)
