Updated scalarFeatures example. Erased old FeatureXXX files.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,8 +7,8 @@ include_directories(
 add_executable( objectFeatures objectFeatures.cpp )
 target_link_libraries( objectFeatures fires )
 
-# add_executable( scalarFeatures scalarFeatures.cpp )
-# target_link_libraries( scalarFeatures fires )
+add_executable( scalarFeatures scalarFeatures.cpp )
+target_link_libraries( scalarFeatures fires )
 
 # add_executable(vectorFeatures vectorFeatures.cpp)
 # target_link_libraries(vectorFeatures fires)
