--- a/fires/CMakeLists.txt
+++ b/fires/CMakeLists.txt
@@ -3,7 +3,7 @@ source_group(\\ FILES CMakeLists.txt)
 set(FIRES_PUBLIC_HEADERS ${COMMON_INCLUDES}
 Averager.h
 Comparer.h
-# Definitions.h
+Definitions.h
 # FeaturePtr.h
 # FeaturePtrToScalar.h
 # FeaturePtrToVector.h
