--- a/fires/CMakeLists.txt
+++ b/fires/CMakeLists.txt
@@ -4,32 +4,23 @@ set(FIRES_PUBLIC_HEADERS ${COMMON_INCLUDES}
 Averager.h
 Comparer.h
 Definitions.h
-# FeaturePtr.h
-# FeaturePtrToScalar.h
-# FeaturePtrToVector.h
-# FeaturePtrToVectorOfPtrs.h
-# FeatureScalar.h
 Object.h
 Objects.h
-QueryFeatures.h
 Feature.h
-# FeaturePtrToScalarComparer.h
-# FeaturePtrToVectorComparer.h
-# FeaturePtrToVectorOfPtrsComparer.h
-# FeatureScalarComparer.h
-# FeatureVectorComparer.h
 Engine.h
+Task.h
+Search.h
+SearchConfig.h
 )
 
 set(FIRES_HEADERS )
 
 set(FIRES_SOURCES ${COMMON_SOURCES}
-# Comparer.cpp
-# Feature.cpp
 Object.cpp
 Objects.cpp
-QueryFeatures.cpp
 Engine.cpp
+SearchConfig.cpp
+Search.cpp
 )
 
 common_library(fires)
