Virtual destructor for Object to prevent freeing issues. Adapted largeNumberOfObjects example.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,6 +23,6 @@ target_link_libraries(vectorFeatures fires)
 # floatFeaturesNormalization.cpp)
 # target_link_libraries(floatFeaturesNormalization fires)
 
-# add_executable(largeNumberOfObjects
-# largeNumberOfObjects.cpp)
-# target_link_libraries(largeNumberOfObjects fires)
+add_executable(largeNumberOfObjects
+largeNumberOfObjects.cpp)
+target_link_libraries(largeNumberOfObjects fires)
