Added aggregate and caster.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,6 +22,9 @@ target_link_libraries( filter fires )
 add_executable( sort sort.cpp )
 target_link_libraries( sort fires )
 
+add_executable( aggregate aggregate.cpp )
+target_link_libraries( aggregate fires )
+
 add_executable( tasks tasks.cpp )
 target_link_libraries( tasks fires )
 
