--- a/fires/CMakeLists.txt
+++ b/fires/CMakeLists.txt
@@ -1,32 +1,33 @@
 source_group(\\ FILES CMakeLists.txt)
 
 set(FIRES_PUBLIC_HEADERS
-Aggregator.h
-Averager.h
-Comparer.h
 Definitions.h
-Filter.h
 error.h
-Normalizer.h
-Object.h
-Objects.h
-Property.h
-PropertyCaster.h
-Engine.h
-Task.h
-Search.h
-SearchConfig.h
-Sort.h
+Object/Object.h
+Object/Objects.h
+Property/Aggregator.h
+Property/Averager.h
+Property/Comparer.h
+Property/Normalizer.h
+Property/PropertyCaster.h
+Property/Property.h
+Tasks/Aggregate.h
+Tasks/Engine.h
+Tasks/Filter.h
+Tasks/SearchConfig.h
+Tasks/Search.h
+Tasks/Sort.h
+Tasks/Task.h
 )
 
 set(FIRES_HEADERS )
 
 set(FIRES_SOURCES
-Object.cpp
-Objects.cpp
-Engine.cpp
-SearchConfig.cpp
-Search.cpp
+Object/Object.cpp
+Object/Objects.cpp
+Tasks/Engine.cpp
+Tasks/SearchConfig.cpp
+Tasks/Search.cpp
 )
 
 if(VMMLIB_FOUND)
@@ -34,4 +35,3 @@ if(VMMLIB_FOUND)
 endif()
 
 common_library(fires)
-
