--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ Ubuntu:
   - date
   - hostname
   - uname -a
+  - export CMAKE_EXTRA_TARGETS="test"
   - export BUILD_GENERATOR="Unix Makefiles"
   - bash .gitlabci.sh
  tags:
@@ -18,6 +19,7 @@ OSX:
   - date
   - hostname
   - uname -a
+  - export CMAKE_EXTRA_TARGETS="test"
   - export BUILD_GENERATOR="Unix Makefiles"
   - bash .gitlabci.sh
  tags:
@@ -26,6 +28,8 @@ OSX:
 Win7:
  stage: build
  script:
+  - set CMAKE_EXTRA_TARGETS=RUN_TESTS
+  - set RUN_TESTS=1
   - set BUILD_GENERATOR=Visual Studio 12 Win64
   - set BOOST_ROOT=c:\libs\boost_1_56_0
   - set BOOST_LIBRARYDIR=c:\libs\boost_1_56_0\lib64-msvc-12.0
