--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ Win7:
   - set BUILD_GENERATOR=Visual Studio 12 Win64
   - set BOOST_ROOT=c:\libs\boost_1_56_0
   - set BOOST_LIBRARYDIR=c:\libs\boost_1_56_0\lib64-msvc-12.0
+  - set PATH=%PATH%;%BOOST_LIBRARYDIR%
   - set PATH=%PATH%;"c:\\Program Files (x86)\\Git\\bin"
   - bash.exe --login .gitlabci.sh
  tags:
