--- a/fires/CMakeLists.txt
+++ b/fires/CMakeLists.txt
@@ -32,7 +32,7 @@ Tasks/Search.cpp
 )
 
 if(VMMLIB_FOUND)
-  list(APPEND FIRES_LINK_LIBRARIES PUBLIC vmmlib)
+  set(FIRES_LINK_LIBRARIES ${FIRES_LINK_LIBRARIES} PUBLIC vmmlib)
 endif()
 
 common_library(fires)
