Improved yml. Fixed boost dependent library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,20 +32,20 @@ include(Common)
 set(FIRES_DESCRIPTION "FiReS - Filter and retrieval System")
 set(COMMON_PROJECT_DOMAIN gmrv.es)
 
-common_package( Boost REQUIRED COMPONENTS unit_test_framework)
+common_package( Boost REQUIRED COMPONENTS unit_test_framework )
 common_package( vmmlib )
 common_package( OpenMP )
 common_package_post( )
 
-list(APPEND FIRES_DEPENDENT_LIBRARIES Boost)
+set( FIRES_DEPENDENT_LIBRARIES Boost )
 
-if (VMMLIB_FOUND)
-  list(APPEND FIRES_DEPENDENT_LIBRARIES vmmlib)
+if ( VMMLIB_FOUND )
+  list( APPEND FIRES_DEPENDENT_LIBRARIES vmmlib )
 endif( )
 
-add_subdirectory(fires)
-add_subdirectory(tests)
-add_subdirectory(examples)
+add_subdirectory( fires )
+add_subdirectory( tests )
+add_subdirectory( examples )
 
-include(CPackConfig)
-include(DoxygenRule)
+include( CPackConfig )
+include( DoxygenRule )
