--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,12 +28,10 @@ OSX:
 Win7:
  stage: build
  script:
+  - call %ENVFILESDIR%\Boost-1.56-vs12-x64.bat
   - set CMAKE_EXTRA_TARGETS=RUN_TESTS
   - set RUN_TESTS=1
   - set BUILD_GENERATOR=Visual Studio 12 Win64
-  - set BOOST_ROOT=c:\libs\boost_1_56_0
-  - set BOOST_LIBRARYDIR=c:\libs\boost_1_56_0\lib64-msvc-12.0
-  - set PATH=%PATH%;%BOOST_LIBRARYDIR%
   - set PATH=%PATH%;"c:\\Program Files (x86)\\Git\\bin"
   - bash.exe --login .gitlabci.sh
  tags:
