--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,19 +29,14 @@ set(VERSION_ABI 1)
 include(Common)
 
 # description
-set(FIRES_DESCRIPTION "FiReS - Filter and retrieval System")
+set(FIRES_DESCRIPTION "FiReS - Filter, Retrieval and Search")
 set(COMMON_PROJECT_DOMAIN gmrv.es)
 
 common_package( Boost REQUIRED COMPONENTS unit_test_framework )
-common_package( vmmlib )
 common_package( OpenMP )
 common_package_post( )
 
 set( FIRES_DEPENDENT_LIBRARIES Boost )
-
-if ( VMMLIB_FOUND )
-  list( APPEND FIRES_DEPENDENT_LIBRARIES vmmlib )
-endif( )
 
 add_subdirectory( fires )
 add_subdirectory( tests )
