Added observer/notifier using ObserverManager. Added dependencies management with updating and dirty capabilities. Fixed warnings in doxygen. Removed virtual dtor in Property

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,33 @@
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
 #   FiReS - Filter, Retrieval and Search
-#   2014 - 2016 (c) GMRV / Universidad Rey Juan Carlos
+#   2014 - 2017 (c) GMRV / URJC / UPM
 #   gmrv@gmrv.es
 #   www.gmrv.es
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
-project(FiReS VERSION 0.1.0 )
-set(FiReS_VERSION_ABI 1)
+cmake_minimum_required( VERSION 3.1 FATAL_ERROR )
+project( FiReS VERSION 0.1.1 )
+set( FiReS_VERSION_ABI 2 )
 
-list(APPEND CMAKE_MODULE_PATH
+list( APPEND CMAKE_MODULE_PATH
   ${PROJECT_SOURCE_DIR}/CMake
-  ${CMAKE_SOURCE_DIR}/CMake/common)
+  ${CMAKE_SOURCE_DIR}/CMake/common )
 
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Debug)
-endif(NOT CMAKE_BUILD_TYPE)
+if( NOT CMAKE_BUILD_TYPE )
+  set( CMAKE_BUILD_TYPE Debug )
+endif( NOT CMAKE_BUILD_TYPE )
 
-include(GitExternal)
+include( GitExternal )
 
+include( Common )
 
-include(Common)
+set( FIRES_DEB_DEPENDS libboost-dev )
 
-# description
-set(FIRES_DESCRIPTION "FiReS - Filter, Retrieval and Search")
-set(COMMON_PROJECT_DOMAIN gmrv.es)
+set( FIRES_DESCRIPTION "FiReS - Filter, Retrieval and Search" )
+set( FIRES_LICENSE LGPL )
+set( FIRES_MAINTAINER "Pablo Toharia <pablo.toharia@upm.es>" )
+set( COMMON_PROJECT_DOMAIN es.gmrv )
 
 common_find_package( Boost REQUIRED COMPONENTS unit_test_framework )
 common_find_package( OpenMP )
@@ -38,4 +40,9 @@ add_subdirectory( tests )
 add_subdirectory( examples )
 
 include( CPackConfig )
+
+
+set( DOXYGEN_MAINPAGE_MD README.md )
+set( DOXYGEN_EXTRA_INPUT ${PROJECT_SOURCE_DIR}/README.md )
+
 include( DoxygenRule )
