--- a/fires/CMakeLists.txt
+++ b/fires/CMakeLists.txt
@@ -1,10 +1,13 @@
 source_group(\\ FILES CMakeLists.txt)
 
 set(FIRES_PUBLIC_HEADERS
+  DependenciesManager.h
   error.h
   Log.h
   Object/Object.h
   Object/Objects.h
+  ObserverManager.h
+  PropertyGIDsManager.h
   PropertyManager.h
   Property/Aggregator.h
   Property/Averager.h
@@ -24,10 +27,14 @@ set(FIRES_PUBLIC_HEADERS
 set(FIRES_HEADERS )
 
 set(FIRES_SOURCES
+  DependenciesManager.cpp
   Log.cpp
   Object/Object.cpp
   Object/Objects.cpp
+  ObserverManager.cpp
+  PropertyGIDsManager.cpp
   PropertyManager.cpp
+  Property/Comparer.cpp
   Property/Property.cpp
   Tasks/Engine.cpp
   Tasks/Filter.cpp
