--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ Ubuntu:
   - date
   - hostname
   - uname -a
+  - export COVERAGE=ON
   - export CMAKE_EXTRA_TARGETS="test"
   - export BUILD_GENERATOR="Unix Makefiles"
   - bash .gitlabci.sh
