--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,18 +7,20 @@
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 cmake_minimum_required( VERSION 3.1 FATAL_ERROR )
-project( FiReS VERSION 0.1.5 )
+project( FiReS VERSION 0.1.6 )
 set( FiReS_VERSION_ABI 4 )
 
 list( APPEND CMAKE_MODULE_PATH
   ${PROJECT_SOURCE_DIR}/CMake
   ${CMAKE_SOURCE_DIR}/CMake/common )
 
+if(NOT EXISTS ${CMAKE_SOURCE_DIR}/CMake/common/Common.cmake)
+  message(FATAL_ERROR "CMake/common missing, run: git submodule update --init")
+endif()
+
 if( NOT CMAKE_BUILD_TYPE )
   set( CMAKE_BUILD_TYPE Debug )
 endif( NOT CMAKE_BUILD_TYPE )
-
-include( GitExternal )
 
 include( Common )
 
