Updated Windows CI config.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ Win7-vs14:
   - set CMAKE_EXTRA_TARGETS=RUN_TESTS
   - set RUN_TESTS=1
   - set BUILD_GENERATOR=Visual Studio 14 Win64
-  - set PATH=%PATH%;"c:\\Program Files (x86)\\Git\\bin"
+  - set PATH=%PATH%;"c:\\Program Files\\Git\\bin"
   - bash.exe --login .gitlabci.sh
  tags:
   - win7
